[gd_scene load_steps=4 format=3 uid="uid://d0ncok11q5qsd"]

[ext_resource type="Script" uid="uid://ol60ski1v7w6" path="res://Games/Bugs/Scripts/Bug.gd" id="1_nnjpv"]
[ext_resource type="Texture2D" uid="uid://c3mweprax1l4o" path="res://Games/Bugs/Assets/Bug.png" id="2_ka50r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ka50r"]
radius = 24.0
height = 64.0

[node name="Bug" type="CharacterBody2D"]
script = ExtResource("1_nnjpv")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_ka50r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_ka50r")

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
